# src

./: CMakeLists.txt  package.xml
include/: Smartkit.hpp  camera.hpp  exceptions.h  general.h  geometry.h  grasp_planning.hpp  object.hpp  robot.hpp
include/a0509_blue_stl/: A0509_0_0.stl  A0509_1.stl  A0509_1_0_10pc.stl  A0509_1_0_2pc.stl  A0509_1_2.stl  A0509_1_30pc.stl  A0509_2_0.stl  A0509_2_10pc.stl  A0509_2_15pc.stl  A0509_2_2.stl  A0509_3.stl  A0509_3_30pc.stl  A0509_4_0.stl  A0509_4_20pc.stl  A0509_5.stl  A0509_5_0.stl  A0509_5_2pc.stl  doosan1.stl  doosan2.stl  doosan6.stl  link2_10pc_noface_moved.stl  link4_10pc_noface.stl  link5_10pc_noface.stl  link5_prova.stl  link6_10pc_noface.stl
include/cube/: GraspsList.json  Remeshed.ply  Voxel.txt  aruco.txt
launch/: robot_launcher.launch  safety_index.rviz
meshes/a0509_blue_stl/: link0.stl  link1.stl  link2.stl  link3.stl  link4.stl
meshes/other/: A0509.stl  A0509_0_0_10pc.stl  A0509_1_0.stl  A0509_1_1.stl  A0509_1_20pc.stl  A0509_2.stl  A0509_2_1.stl  A0509_3_0.stl  A0509_3_1.stl  A0509_4.stl  A0509_4_1.stl  A0509_5_1.stl  A0509_6_0.stl  A0509_6_0_2pc.stl  doosan3.stl  doosan4.stl  doosan5.stl  gripper.stl  gripper1.stl  gripper11.stl  gripper2.stl  gripper22.stl  gripperr.stl  link0_prova.stl  link1_10pc_noface.stl  link1_17_01.stl  link1_18_01.stl  link2_10pc_noface.stl  link2_18_01.stl  link3_10pc_noface.stl
src/: QuickHull.cpp  Smartkit.cpp  camera.cpp  geometry.cpp  grasp_planning.cpp  grasp_planning_node.cpp  jsoncpp.cpp  object.cpp  robot.cpp  robot_node.cpp  robot_old.cpp  robot_old_node.cpp
srv/: compute.srv
